# BEJ_Decoder

./: BEJDecoder.c  BEJDecoder.h  CMakeLists.txt  README.md  definedTypes.h  getFromDictionary.c  getFromDictionary.h  main.c  writeJSON.c  writeJSON.h
tests/: CMakeLists.txt  mytests.cpp
